--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: 'Raleway';
-  src: url('assets/fonts/Raleway-Normal.ttf') format('truetype');
+  src: url('../assets/fonts/Raleway-ExtraLight.ttf') format('truetype');
 }
